@@ -40,6 +40,11 @@ Issue: 2
 
 Type.: Feature
 File.: Host
+Desc.: Added option --opencl-device-types to filter for specific OpenCL device types
+Issue: 2
+
+Type.: Feature
+File.: Host
 Desc.: Implemented a new feature that allows to quit at next restore point update (and disable it)
 Issue: 10
 
